--- a/css/layout.css
+++ b/css/layout.css
@@ -56,20 +56,20 @@ header .banner {
 }
 
 header .banner-text { width: 100%; }
-    header .banner-text h1 {
-        font: 90px/1.1em 'opensans-bold', sans-serif;
-        color: #fff;
-        letter-spacing: -2px;
-        margin: 0 auto 18px auto;
+header .banner-text h1 {
+   font: 90px/1.1em 'opensans-bold', sans-serif;
+   color: #fff;
+   letter-spacing: -2px;
+   margin: 0 auto 18px auto;
+   text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
+}
+    header .banner-text h3 {
+        font: 18px/1.9em 'librebaskerville-regular', serif;
+        color: color: #fff;
+        margin: 0 auto;
+        width: 70%;
         text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
     }
-header .banner-text h3 {
-   font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #A8A8A8;
-   margin: 0 auto;
-   width: 70%;
-   text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
-}
 header .banner-text h3 span,
 header .banner-text h3 a {
    color: #fff;
