--- a/css/layout.css
+++ b/css/layout.css
@@ -65,7 +65,7 @@ header .banner-text h1 {
 }
     header .banner-text h3 {
         font: 18px/1.9em 'librebaskerville-regular', serif;
-        color: color: #fff;
+        color: #fff;
         margin: 0 auto;
         width: 70%;
         text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
