Ajustes  no layout

--- a/css/default.css
+++ b/css/default.css
@@ -286,16 +286,16 @@ hr { border: solid #E3E3E3; border-width: 1px 0 0; clear: both; margin: 11px 0 3
 /*  3. Links  ------------------------------------------------------- */
 
 a, a:visited {
-   text-decoration: none;
+   text-decoration: 0;
    outline: 0;
-   color: #11ABB0;
+   color: white;
 
    -webkit-transition: color .3s ease-in-out;
    -moz-transition: color .3s ease-in-out;
    -o-transition: color .3s ease-in-out;
    transition: color .3s ease-in-out;
 }
-a:hover, a:focus { color: #313131; }
+a:hover, a:focus { color: blue; }
 p a, p a:visited { line-height: inherit; }
 
 
