--- a/css/layout.css
+++ b/css/layout.css
@@ -263,7 +263,7 @@ ul#nav li.current a { color: #F06000; }
 .education, .work {
    margin-bottom: 48px;
    padding-bottom: 24px;
-   border-bottom: 1px solid #E8E8E8;
+   border-bottom: 1px solid gray;
 }
 #resume .info {
    font: 16px/24px 'librebaskerville-italic', serif;
