--- a/css/layout.css
+++ b/css/layout.css
@@ -63,7 +63,7 @@ header .banner {
     margin: 0 auto;
     width: 85%;
     padding-bottom: 30px;
-    s text-align: center;
+    text-align: center;
 }
 
 header .banner-text {
